production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedit-production
  namespace: wedit-production
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wedit-production
  template:
    metadata:
      labels:
        app: wedit-production
    spec:
      containers:
        - name: wedit
          image: nginx:alpine
          ports:
            - containerPort: 8080
