production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedit-production-service
  namespace: wedit-production
spec:
  selector:
    app: wedit-production
  ports:
    - port: 80
      targetPort: 8080
